--- a/_includes/cv.html
+++ b/_includes/cv.html
@@ -10,7 +10,7 @@
 
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Designs skills</div>
+            <div class="text_content">Analysis skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
@@ -18,7 +18,7 @@
         <div class="skills">
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="95%">
-                <div class="skillbar-title"><span>Photoshop</span></div>
+                <div class="skillbar-title"><span>Store/product wise</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
             </div>
@@ -27,196 +27,64 @@
             
             <!-- .skillbar -->
             <div class="skillbar clearfix" data-percent="90%">
-                <div class="skillbar-title"><span>Illustrateur</span></div>
+                <div class="skillbar-title"><span>Occupancy Analysis</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">90%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="65%">
-                <div class="skillbar-title"><span>Indesign</span></div>
+            <div class="skillbar clearfix" data-percent="85%">
+                <div class="skillbar-title"><span>Cost breakdown analysis</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">65%</div>
+                <div class="skill-bar-percent">85%</div>
             </div>
             <!-- /.skillbar -->
             
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="35%">
-                <div class="skillbar-title"><span>Flash</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">35%</div>
-            </div>
-            <!-- /.skillbar -->
         </div>
-        
         
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Programming Skills</div>
+            <div class="text_content">Automation</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
         
         <div class="skills">
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>Wordpress</span></div>
+            <div class="skillbar clearfix" data-percent="95%">
+                <div class="skillbar-title"><span>Excel</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
+                <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="75%">
-                <div class="skillbar-title"><span>Joomla</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">75%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Drupal</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="89%">
-                <div class="skillbar-title"><span>Php</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">89%</div>
-            </div>
-            <!-- /.skillbar --> 
         </div>
         
          
         <!-- .title_content -->
         <div class="title_content" style="float: none;">
-            <div class="text_content">Office Skills</div>
+            <div class="text_content">Financial Analysis Skills</div>
             <div class="clear"></div>
         </div>
         <!-- /.title_content -->
             
         <div class="skills">       
             <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="85%">
-                <div class="skillbar-title"><span>MS Excel</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="95%">
-                <div class="skillbar-title"><span>MS Word</span></div>
+            <div class="skillbar clearfix" data-percent="95%">
+                <div class="skillbar-title"><span>Evaluation of Financial Performance</span></div>
                 <div class="skillbar-bar"></div>
                 <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
             
             <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="60%">
-                <div class="skillbar-title"><span>Powerpoint</span></div>
+            <div class="skillbar clearfix " data-percent="95%">
+                <div class="skillbar-title"><span>Pricing contract/agreement evaluation</span></div>
                 <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
+                <div class="skill-bar-percent">95%</div>
             </div>
             <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="40%">
-                <div class="skillbar-title"><span>SharePoint</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">40%</div>
-            </div>
-            <!-- /.skillbar -->   
 		</div>
-        
-        
-        <!-- .title_content -->
-        <div class="title_content" style="float: none;">
-            <div class="text_content">Hobbies Skills</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-        
-        <div class="skills">
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="60%">
-                <div class="skillbar-title"><span>Music</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="95%">
-                <div class="skillbar-title"><span>Sport</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">95%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="85%">
-                <div class="skillbar-title"><span>Reading</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">85%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="70%">
-                <div class="skillbar-title"><span>Travelling</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">70%</div>
-            </div>
-            <!-- /.skillbar -->
-        </div>
-        
-        
-        <!-- .title_content -->
-        <div class="title_content" style="float: none;">
-            <div class="text_content">Language Skills</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-        
-        <div class="skills">
-            <!-- .skillbar -->
-            <div class="skillbar clearfix" data-percent="90%">
-                <div class="skillbar-title"><span>English</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">90%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="80%">
-                <div class="skillbar-title"><span>French</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">80%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="50%">
-                <div class="skillbar-title"><span>Spanish</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">50%</div>
-            </div>
-            <!-- /.skillbar -->
-            
-            <!-- .skillbar -->
-            <div class="skillbar clearfix " data-percent="60%">
-                <div class="skillbar-title"><span>Swiss</span></div>
-                <div class="skillbar-bar"></div>
-                <div class="skill-bar-percent">60%</div>
-            </div>
-            <!-- /.skillbar -->
-        </div>
         
         
         <!-- .title_content -->
@@ -227,15 +95,19 @@
         <!-- /.title_content -->
         
         <!-- .download_resume -->
-        <a class="download" style="margin:0;float: left;" href="#">
+        <a class="download" style="margin:0;float: left;" href="assets/pdf/poornima-resume.pdf">
             <span data-hover="Download My Resume"><i class="glyphicon glyphicon-download-alt"></i> Download My Resume</span>
+        </a>
+        <!-- /.download_resume -->
+
+        <!-- .download_cv -->
+        <a class="download" style="margin:0;float: left;" href="assets/pdf/poornima-cv.pdf">
+            <span data-hover="Download Detailed CV"><i class="glyphicon glyphicon-download-alt"></i> Download Detailed CV</span>
         </a>
         <!-- /.download_resume -->
 
     </div>
      <!-- /.resume-right -->
-     
-     
      
      <!-- .resume-left -->
     <div class="col-md-6 resume-left">    
@@ -249,14 +121,22 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Web Developer <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Director, Finance<span class="duration"><i class="fa fa-calendar color"></i> 2017 - present</span></h5>
+                <h6><span class="fa fa-briefcase"></span> High Level Marketing Inc</h6>
+                <p>Joined HLM in June, 2017 to run their Finance Department.</p>
             </li>
             <li>
-                <h5>Front-End Developer <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-briefcase"></span> Name of Company</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Manager, FP & A<span class="duration"><i class="fa fa-calendar color"></i> 2012 - 2016</span></h5>
+                <h6><span class="fa fa-briefcase"></span>GHS Holdings</h6>
+                <p> Joined GHS in 2012 and worked with their clients PJ Boston LLC, A Papa Johns Franchise, Quiznos, The Krystal Co, Crawford Company </p>
+                <p> Worked on various projects like Scope Analysis for US based restaurant chain, Dashboard reports, P&L reports, Outsourcing Analysis, Compensation Analysis, Periodic Business Review etc</p>
+            </li>
+            <li>
+                <h5>Manager<span class="duration"><i class="fa fa-calendar color"></i> 2012 - 2016</span></h5>
+                <h6><span class="fa fa-briefcase"></span>HTA, Atlanta</h6>
+                <p> Handling all accounting and finance needs for the organization
+                <p> Managing vendor contracts, employee payroll etc.
+                <p> Managing day to day operations of the organization, including timesheets, task assignments etc.
             </li>
 
         </ul>
@@ -273,40 +153,15 @@
         <!-- .attributes -->
         <ul class="attributes">
             <li class="first">
-                <h5>Master of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2011 - 2013</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>MBA<span class="duration"><i class="fa fa-calendar color"></i> 2009 - 2010</span></h5>
+                <h6><span class="fa fa-book"></span> Great Lakes Institute of Management</h6>
+                <p>MBA in General Management and Finance</p>
             </li>
             <li>
-                <h5>Bachelor of Engineering <span class="duration"><i class="fa fa-calendar color"></i> 2010 - 2011</span></h5>
-                <h6><span class="fa fa-book"></span> Name of University</h6>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscingVivamus sit amet ligula non lectus cursus egestas. Cras erat lorem, fringilla quis sagittis in, sagittis inNam leo tortor Nam leo tortor Vivamus.</p>
+                <h5>Bachelor of Commerce<span class="duration"><i class="fa fa-calendar color"></i> 2003 - 2006</span></h5>
+                <h6><span class="fa fa-book"></span> Fatima College</h6>
+                <p>Bachelor of Commerce - Finance/Accounting</p>
             </li>
-        </ul>
-        <!-- /.attributes -->
-        <br>  
-        
-        
-          <!-- .title_content -->
-        <div class="title_content">
-            <div class="text_content">Awards</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-        
-        <!-- .attributes -->
-        <ul class="attributes">
-            <li class="first">
-                <h5>Graphic &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2013 - 2014</span></h5>
-                <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
-                <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
-            </li>
-            <li>
-                <h5>Design &amp; Art Direction <span class="duration"><i class="fa fa-calendar color"></i> 2012 - 2013</span></h5>
-                <h6><span class="fa fa-trophy"></span> Name of Institute</h6>
-                <p>Emi Phasellus congue auctor risuspon, eget males. Pellentes que un imperdiet, odio quis orn sollicitud. Sed vitae lectus elementum mauris.</p>
-            </li>
-  
         </ul>
         <!-- /.attributes -->
         <br>  
@@ -322,34 +177,6 @@
 <div class="row">
 <div class="col-md-12">   
     
-<div class="reference clearfix"> 
-            
-         <!-- .title_content -->
-        <div class="title_content" style="margin-bottom:5px">
-            <div class="text_content">Client reference</div>
-            <div class="clear"></div>
-        </div>
-        <!-- /.title_content -->
-        
-
-        <ul>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“Many desktop publishing packages and web page editors now use Lorem Ipsum as their default will model text, and a search for 'lorem ipsum' hope is uncover many web sites still”</p>
-                <span>John Doe, UX Designer</span>
-            </li>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“very nice colleague she always helped me out if i didnt know something editors now use Lorem Ipsum as their default”</p>
-                <span>Leia Calvi, UX Designer</span>
-            </li>
-            <li class="clearfix">
-                <img src="http://placehold.it/100x100" class="img_reference" width="100" height="100" alt="">
-                <p>“old colleague and now close friend, she is really sweet and helpfull packages and web page editors now use Lorem Ipsum as their default will model text”</p>
-                <span>Maria Callas, UX Designer</span>
-            </li>
-        </ul>
-</div>
 </div>
 
      
