--- a/_includes/profile.html
+++ b/_includes/profile.html
@@ -8,7 +8,7 @@
  		
         <!--About me-->
         <div class="title_content">
-            <div class="text_content">brown smith</div>
+            <div class="text_content">Poornima Ramamoorthy</div>
             <div class="clear"></div>
         </div>
 
@@ -17,42 +17,35 @@
             <li>
                 <i class="glyphicon glyphicon-user"></i>
                 <label>Name</label>
-                <span class="value">Brown Smith</span>
-                <div class="clear"></div>
-            </li>
-
-            <li>
-                <i class="glyphicon glyphicon-calendar"></i>
-                <label>Date of birth</label>
-                <span class="value">March 18, 1988</span>
+                <span class="value">Poornima Ramamoorthy</span>
                 <div class="clear"></div>
             </li>
 
             <li> 
                 <i class="glyphicon glyphicon-map-marker"></i>
                 <label>Adress</label>
-                <span class="value">San Francisco , CA</span>
+                <span class="value">Ann Arbor, MI</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-envelope"></i>
                 <label>Email</label>
-                <span class="value">brown.smith@gmail.com</span>
+                <span class="value">r.poornima1986@gmail.com</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-phone"></i>
                 <label>Phone</label>
-                <span class="value">+123 (21) 1234-5678</span>
+                <span class="value">+1 (720) 431-7321</span>
                 <div class="clear"></div>
             </li>
 
             <li>
                 <i class="glyphicon glyphicon-globe"></i>
                 <label>Website</label>
-                <span class="value"><a href="#" target="_blank">sc.chinaz.com</a></span>
+                <span class="value"><a href="#" target="_blank">financialanalysis.net</a></span>
                 <div class="clear"></div>
             </li>
 
@@ -61,12 +54,11 @@
 
         <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis.
+            I have around 8 years of Financial & Business analysis experience backed up by an MBA in Finance and a Bachelors degree in Commerce/Accounting. I also have an intermediate level certification in Cost accounting. I have experience in various areas like Corporate planning, Corporate Strategy, Accounting, Performance Management, Compensation Analysis, Financial Viability Analysis, Reconciliations, Mergers & Acquisitions - due diligence etc.
         </p>
-        
          <p style="margin-bottom:20px">
             <i class="fa fa-quote-left"></i>       
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam nec nulla sagittis, scelerisque mi vitae, congue turpis. 
+            While working on these diverse areas I've had a lot of opportunity to crunch through large sets of data, refer to different industry databases, summarize data through excel etc etc. I'm in my element when trying to solve problems by condensing tons of data into concise and actionable information.
 
         </p>
 
@@ -91,7 +83,7 @@
 <div class="row" id="services">
 	<div class="col-md-12">
         <div class="title_content">
-            <div class="text_content">My Services 1</div>
+            <div class="text_content">Specialities</div>
             <div class="clear"></div>
         </div>
 
@@ -100,8 +92,8 @@
             <div class="service">
                 <div class="service-icon"><i class="fa fa-tag"></i></div>
                 <div class="service-detail">
-                    <h6>Making Money</h6>
-                    <p>Fusce quis interdum ipsum.Suspendi suscipit vehicula sapienid mattis. Lorem ipsum amet consectetur.</p>
+                    <h6>Financial Consulting</h6>
+                    <p>Decisions are hard. They get harder when money is involved. Let me help you make decisions.</p>
                 </div>
             </div>
         </div>
@@ -109,8 +101,8 @@
             <div class="service">
                 <div class="service-icon"><i class="fa fa-cogs"></i></div>
                 <div class="service-detail">
-                    <h6>Easy to Customize</h6>
-                    <p>Fusce quis interdum ipsum.Suspendi suscipit vehicula sapienid mattis. Lorem ipsum amet consectetur.</p>
+                    <h6>Building Financial Dashboards</h6>
+                    <p>Do you need dashboards that cover the performance of an entire company? Division by division, region by region, product by product? You got it.</p>
                 </div>
             </div>
         </div>
@@ -118,80 +110,13 @@
             <div class="service">
                 <div class="service-icon"><i class="fa fa-arrows-alt"></i></div>
                 <div class="service-detail">
-                    <h6>Moving Let Us Help</h6>
-                    <p>Fusce quis interdum ipsum.Suspendi suscipit vehicula sapienid mattis. Lorem ipsum amet consectetur.</p>
+                    <h6>M&A Advisory</h6>
+                    <p>Do the numbers make sense? Thats the first question you need to ask about every deal. Once the numbers align, everything else falls in place.</p>
                 </div>
             </div>
         </div>
      </div> 
 </div><!-- End Services -->
-
-
-
-<!-- service 2 -->
-<div class="clear"></div>
-<div class="border-list"></div>
-
-<div class="row">
-<div class="col-md-12">
-    <div class="bottom-p">
-        <div class="title_content">
-            <div class="text_content">My Services 2</div>
-            <div class="clear"></div>
-        </div>
-
-        <div class="panel-group" id="accordion">
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" class="collapse_tabs">
-                            Making Money
-                            <i class="glyphicon glyphicon-chevron-up" style="float: right;font-size: 13px;"></i>
-                        </a>
-                    </h4>
-                </div>
-                <div id="collapseOne" class="panel-collapse collapse in">
-                    <div class="panel-body">
-                        <i class="fa fa-quote-left"></i>  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" class="collapse_tabs">
-                            Easy to Customize
-                            <i class="glyphicon glyphicon-chevron-down" style="float: right;font-size: 13px;"></i>
-                        </a>
-                    </h4>
-                </div>
-                <div id="collapseTwo" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        <i class="fa fa-quote-left"></i>  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
-            <div class="panel panel-default">
-                <div class="panel-heading">
-                    <h4 class="panel-title">
-                        <a data-toggle="collapse" data-parent="#accordion" href="#collapseThree" class="collapse_tabs">
-                            Moving Let Us Help
-                            <i class="glyphicon glyphicon-chevron-down" style="float: right;font-size: 13px;"></i>
-                        </a>
-                    </h4>
-                </div>
-                <div id="collapseThree" class="panel-collapse collapse">
-                    <div class="panel-body">
-                        <i class="fa fa-quote-left"></i>  Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
-                    </div>
-                </div>
-            </div>
-        </div>
-
-    </div>
-</div>
-</div>
-<!-- end service 2 -->
 
 <div class="clear"></div>
 </div>
